In-class practice 10/10/22

--- a/practiceNotebooks/mlgeo_2.2_pandas.ipynb
+++ b/practiceNotebooks/mlgeo_2.2_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63b854bf",
+   "id": "7808a376",
    "metadata": {},
    "source": [
     "# Introduction to pandas"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65139897",
+   "id": "c1105401",
    "metadata": {},
    "source": [
     "The python package pandas is very useful to read csv files, but also many text files that are more or less formated as one observation per row and one column for each feature."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a98f58",
+   "id": "f1696578",
    "metadata": {},
    "source": [
     "As an example, we are going to look at the list of seismic stations from the Northern California seismic network, available [here](http://ncedc.org/ftp/pub/doc/NC.info/NC.channel.summary.day):\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "074a5f46",
+   "id": "3bc629d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e03b2d6",
+   "id": "6ae8970c",
    "metadata": {},
    "source": [
     "First we import useful packages. The package request is useful to read data from a web page."
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "80ddbf1e",
+   "id": "0c2cf73f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fb71ba65-8da4-45b6-b2e5-16c1ddef7fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting plotly\n",
+      "  Downloading plotly-5.10.0-py2.py3-none-any.whl (15.2 MB)\n",
+      "\u001b[K     |████████████████████████████████| 15.2 MB 6.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting pyarrow\n",
+      "  Downloading pyarrow-9.0.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (35.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 35.3 MB 71.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting tenacity>=6.2.0\n",
+      "  Downloading tenacity-8.1.0-py3-none-any.whl (23 kB)\n",
+      "Requirement already satisfied: numpy>=1.16.6 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from pyarrow) (1.23.3)\n",
+      "Installing collected packages: tenacity, pyarrow, plotly\n",
+      "Successfully installed plotly-5.10.0 pyarrow-9.0.0 tenacity-8.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install plotly pyarrow"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "7099b006",
+   "id": "3779b29c",
    "metadata": {},
    "source": [
     "The function read_csv is used to open and read your text file. In the case of a well formatted csv file, only the name of the file needs to be entered:\n",
@@ -75,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a0de021",
+   "id": "a33d00e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "133c85db",
+   "id": "124691b7",
    "metadata": {},
    "source": [
     "Let us look at the data. They are now stored into a pandas dataframe."
@@ -95,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b33b4e9d",
+   "id": "6e54dafa",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0fa3163",
+   "id": "f1f0db5d",
    "metadata": {},
    "source": [
     "There are two aways of looking at a particular column:"
@@ -255,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b966347",
+   "id": "0b8b4600",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c0c5958a",
+   "id": "a3fe7291",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61172f6",
+   "id": "85024632",
    "metadata": {},
    "source": [
     "If we want to look at a given row or column, and we know its index, we can do:"
@@ -327,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4d8ca4b2",
+   "id": "8263c4e4",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4b1c57e2",
+   "id": "6939a1b3",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3669aaed",
+   "id": "ffa47486",
    "metadata": {},
    "source": [
     "If we know the name of the column, we can do:"
@@ -401,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b216eedf",
+   "id": "b1d8b6cc",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c424d502",
+   "id": "5b908d85",
    "metadata": {},
    "source": [
     "We can also access a single value within a column:"
@@ -441,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8275ac2e",
+   "id": "35774a89",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe8e21bf",
+   "id": "678278c3",
    "metadata": {},
    "source": [
     "We can filter the data with the value taken by a given column:"
@@ -470,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ac4a501e",
+   "id": "f67259f2",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "71b6b2d4",
+   "id": "ee767a3d",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "95590263",
+   "id": "f2080ecf",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8d42ca8",
+   "id": "74ec8dc7",
    "metadata": {},
    "source": [
     "We can access to a brief summary of the data:"
@@ -1306,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "db85f2aa",
+   "id": "0d389792",
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "45f318ca",
+   "id": "5df75253",
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e886e9f",
+   "id": "66308a06",
    "metadata": {},
    "source": [
     "We can perform standard operations on the whole data set:"
@@ -1368,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "83e8eea6",
+   "id": "53f0d35b",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b5929d",
+   "id": "fe4786c6",
    "metadata": {},
    "source": [
     "In the case of a categorical variable, we can get the list of possile values that this variable can take:"
@@ -1404,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "57ac7197",
+   "id": "c9c84df8",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0d4bab",
+   "id": "f6f37f98",
    "metadata": {},
    "source": [
     "and get the number of times that each value is taken:"
@@ -1443,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ad25b35d",
+   "id": "35c3e79e",
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8803c55",
+   "id": "166d7372",
    "metadata": {},
    "source": [
     "There are several ways of doing an operation on all rows of a column. The first option is to use the map function.\n",
@@ -1487,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b1161693",
+   "id": "5044f8c6",
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a193a17",
+   "id": "eacc587b",
    "metadata": {},
    "source": [
     "The second option is to use the apply function:"
@@ -1528,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5cb275e4",
+   "id": "9f1c39a7",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed44505d",
+   "id": "013e4be5",
    "metadata": {},
    "source": [
     "We can also carry out simple operations on coulumns, provided they make sense."
@@ -1815,7 +1843,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2da99d69",
+   "id": "e9082827",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a405a09",
+   "id": "aa2d0df2",
    "metadata": {},
    "source": [
     "A useful feature is to group the rows depending on the value of a categorical variable, and then apply the same operation to all the groups. For instance, I want to know how many times each station appears in the file:"
@@ -1855,7 +1883,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9c15cbb5",
+   "id": "f8d7e2d2",
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582cb976",
+   "id": "a503f294",
    "metadata": {},
    "source": [
     "Or I want to know what is the lowest and the highest elevation for each station:"
@@ -1896,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ce550709",
+   "id": "c3d6a617",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "065672d1",
+   "id": "24ec95a9",
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1300d22c",
+   "id": "66c6bad9",
    "metadata": {},
    "source": [
     "We can have access to the data type of each column:"
@@ -1970,7 +1998,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "34880dc7",
+   "id": "a8bcdf37",
    "metadata": {},
    "outputs": [
     {
@@ -2003,7 +2031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "010f0840",
+   "id": "5f22ffd2",
    "metadata": {},
    "source": [
     "Here, pandas does not recognize the start_time and end_time columns as a datetime format, so we cannot use datetime operations on them. We first need to convert these columns into a datetime format:"
@@ -2012,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f009f3a0",
+   "id": "2a960056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,7 +2055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce973c63",
+   "id": "03405c9c",
    "metadata": {},
    "source": [
     "We can now look when each seismic station was installed:"
@@ -2036,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "77381bc1",
+   "id": "b614bf80",
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7170931",
+   "id": "051d1d8f",
    "metadata": {},
    "source": [
     "The agg function allows to carry out several operations to each group of rows:"
@@ -2077,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7b3beabc",
+   "id": "29c3bc56",
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "def1d4ae",
+   "id": "97a4da81",
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752a1745",
+   "id": "b1effd41",
    "metadata": {},
    "source": [
     "We can also make groups by selecting the values of two categorical variables:"
@@ -2333,7 +2361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5e9eff40",
+   "id": "ef3e48bb",
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ffdb42",
+   "id": "0262826d",
    "metadata": {},
    "source": [
     "Previously, we just printed the output, but we can also store it in a new variable:"
@@ -2473,7 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6d442008",
+   "id": "c83121c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2483,7 +2511,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "abe45c65",
+   "id": "a0f56860",
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0b657a",
+   "id": "568493b5",
    "metadata": {},
    "source": [
     "When we select only some rows, the index is not automatically reset to start at 0. We can do it manually. Many functions in pandas have also an option to reset the index, and option to transform the dataframe in place, instead of saving the results in another variable."
@@ -2581,7 +2609,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7f2dabcc",
+   "id": "64627e82",
    "metadata": {},
    "outputs": [
     {
@@ -2722,7 +2750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e4b93e",
+   "id": "2b233570",
    "metadata": {},
    "source": [
     "It is also possible to sort the dataset by value."
@@ -2731,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "214be9e3",
+   "id": "8a96af01",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e2f4f75",
+   "id": "2e064302",
    "metadata": {},
    "source": [
     "We can apply the sorting to several columns:"
@@ -2872,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7f570239",
+   "id": "874137b0",
    "metadata": {},
    "outputs": [
     {
@@ -3005,7 +3033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9f6a72",
+   "id": "e1a65bf3",
    "metadata": {},
    "source": [
     "A useful pandas function is the merge functions that allows you two merge two dataframes that have some columns in common, but have also different columns that you may want to compare with each other.\n",
@@ -3015,7 +3043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61898d61",
+   "id": "9a4e82d6",
    "metadata": {},
    "source": [
     "I will compare the catalogs between July 2007 and May 2009. There is a time delay of 10s between the detection time of one catalog compared to the other. I will also filter the catalogs to eleiminate false detections."
@@ -3024,7 +3052,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "42739e4e",
+   "id": "661bbad2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3037,7 +3065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "693ac1bf",
+   "id": "03b7f901",
    "metadata": {},
    "source": [
     "I first read the two catalogs, and apply the filtering:"
@@ -3046,7 +3074,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d9975895",
+   "id": "31efbb54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3072,7 +3100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ec9bf1",
+   "id": "6466b24e",
    "metadata": {},
    "source": [
     "To make the comparison, I first concatenate the two dataframes into a single dataframe. Then I merge the concatenated dataframe with one of the initial dataframes.\n",
@@ -3085,7 +3113,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a7f2eda0",
+   "id": "6a27576a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3103,7 +3131,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8ffe2323",
+   "id": "f3bacb11",
    "metadata": {},
    "outputs": [
     {
@@ -3439,7 +3467,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8a0dad09",
+   "id": "a0e0dbeb",
    "metadata": {},
    "outputs": [
     {
@@ -3775,7 +3803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41216f9",
+   "id": "0ca48e73",
    "metadata": {},
    "outputs": [],
    "source": []
