11/2 more unsupervised clustering

--- a/homework/homework_3.ipynb
+++ b/homework/homework_3.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Homework 3\n",
     "\n",
-    "This homework will explore linear regression and resampling techniques by analysing data from a database of glaciers. The database is *Glatilda* for [*Glacier Ice Thickness Database*](!https://www.gtn-g.ch/data_catalogue_glathida/).\n",
+    "This homework will explore linear regression and resampling techniques by analyzing data from a database of glaciers. The database is *Glatilda* for [*Glacier Ice Thickness Database*](!https://www.gtn-g.ch/data_catalogue_glathida/).\n",
     "\n",
     "1. Data prep (5 points)\n",
     "2. Mapping (10 points)\n",
