--- a/practiceNotebooks/2.7_data_spectral_transforms.ipynb
+++ b/practiceNotebooks/2.7_data_spectral_transforms.ipynb
@@ -92,7 +92,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "\n",
     "\n",
